tests/positive/one_assignment.c
main() {
    int pwet;

    pwet = 6;
}
