tests/negative/one_incorrect_assigment.c
main() {
    int pwet;

    pwet2 = 6;
}
